# cli-ai

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/mayai/: __init__.py  cli.py  compare.py  config.py  conversation.py  converter.py  costs.py  display.py  exceptions.py  extractor.py  fileops.py  finder.py  history.py  plugins.py  repl.py  research.py  sessions.py  setup_wizard.py  shell.py
src/mayai/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py  openai_compat.py  perplexity.py
src/mayai/tools/: __init__.py  agent_tools.py  base.py  registry.py
