[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayai"
version = "0.1.0"
description = "MAYAI - Multi-provider AI CLI (OpenAI, Anthropic, Gemini, Perplexity, Groq, Ollama)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "cli", "llm", "openai", "anthropic", "gemini", "perplexity", "groq", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
mayai = "mayai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mayai"]
