[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayai"
version = "0.1.0"
description = "MAYAI - Multi-provider AI CLI (OpenAI, Anthropic, Gemini, Perplexity, Groq, Ollama)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "MAYAI" }]
keywords = ["ai", "cli", "llm", "openai", "anthropic", "gemini", "perplexity", "groq", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Repository = "https://github.com/viktoras-mayberry/cli-ai"
Issues = "https://github.com/viktoras-mayberry/cli-ai/issues"

[project.scripts]
mayai = "mayai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mayai"]
