[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayai"
version = "0.1.0"
description = "MAYAI - Your AI assistant in the terminal. Chat, research with sources, find and manage files, compare AI models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "MAYAI" }]
keywords = ["ai", "cli", "llm", "assistant", "research", "file-manager", "openai", "anthropic", "gemini", "perplexity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
docs = ["pdfplumber>=0.10.0", "python-docx>=1.0.0", "openpyxl>=3.1.0", "reportlab>=4.0.0"]
images = ["Pillow>=10.0.0"]
detect = ["chardet>=5.0.0"]
all = ["mayai[docs,images,detect]"]

[project.urls]
Repository = "https://github.com/viktoras-mayberry/cli-ai"
Issues = "https://github.com/viktoras-mayberry/cli-ai/issues"

[project.scripts]
mayai = "mayai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mayai"]
